tests/ui/cve_2020_35873/cve_2020_35873.stderr
error: use a pointer from `std::ffi::CString` after dropped
  --> tests/ui/cve_2020_35873/cve_2020_35873.rs:29:25
   |
LL |         unsafe { check!(ffi::sqlite3session_attach(self.s, table)) };
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the `std::ffi::CString` value is dropped here
  --> tests/ui/cve_2020_35873/cve_2020_35873.rs:25:9
   |
LL |         } else {
   |         ^

note: fn pattern matched
  --> tests/ui/cve_2020_35873/cve_2020_35873.rs:37:9
   |
LL |         pub fn sqlite3session_attach(s: i32, table: *const std::ffi::c_char) -> i32;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

